colour-contrast-fix

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -50,11 +50,13 @@
       width: fit-content;
 
       figure {
+      
         border-radius: 0.5rem;
         margin: 1rem;
         box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.5);
-        background-color: $light-blue-shadow;
+        background-color: $light-blue;
         figcaption {
+          color: $black;
           font-weight: bold;
           padding: 1rem;
         }
