--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,10 +4,10 @@
 
 $text-font: 'Noto Serif', serif;
 
-$black:rgb(10, 17, 43);
+$black:#0a112b;
 $dark-blue:rgb(26, 42, 108);
-$blue: rgb(53, 71, 127);
-$light-blue: rgb(100, 122, 186);
+$blue: #35477f;
+$light-blue: #8e9ecc;
 $brown:rgb(178, 31, 31);
 $dark-yellow:rgb(253, 187, 45);
 $black-green:rgb(17, 69, 21);
@@ -21,5 +21,5 @@ $brown-shadow: rgba(178, 31, 31, 0.5);
 $blue-shadow: rgba( 53, 71, 127, 0.5);
 $dark-yellow-shadow: rgba(253, 187, 45, 0.5);
 $bright-blue-shadow: rgba(4, 132, 178, 0.7);
-$light-blue-shadow: rgba(100, 122, 186, 0.5);
+$light-blue-shadow: #647aba80;
 $white-shadow: rgba(234, 234, 234, 0.5);
